<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uwaterloo.lab3_205_02.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/containLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strAccuracy" />

            <SeekBar
                android:id="@+id/sb_filterLvl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="99" />

            <TextView
                android:id="@+id/txtLowThresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="99"
                android:text="@string/strLowThresh" />

            <SeekBar
                android:id="@+id/sb_LowThresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="99" />

            <TextView
                android:id="@+id/txtHighThresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strHighThresh" />

            <SeekBar
                android:id="@+id/sb_HighThresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="99" />

            <TextView
                android:id="@+id/txtStepData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtStep" />

            <TextView
                android:id="@+id/txtTest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTest" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strReset" />

            <RadioButton
                android:id="@+id/rdoRun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRunMode" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>